--- a/MyApp/.gitignore
+++ b/MyApp/.gitignore
@@ -1,1 +1,5 @@
 /AccountingApp.class
+/AccountingIFApp.class
+/AccountingIFUnder10000App.class
+/AccountingArrayApp.class
+/AccountingArrayLoopApp.class
