--- a/MyApp/.gitignore
+++ b/MyApp/.gitignore
@@ -3,3 +3,6 @@
 /AccountingIFUnder10000App.class
 /AccountingArrayApp.class
 /AccountingArrayLoopApp.class
+/AccountingMethodApp.class
+/Accounting.class
+/AccountingClassApp.class
